Sync Change Manager ADFS implementation
